0.4.2
User marks are now labeled "user1","user2","user3","user4" Add at cuurent line with eg 'Uuser3' remove with eg 'uuser3'.
Added open session file to scripting ( command='s', fullpath to session file needed ). 
More scripting.
Added 'goodies' folder with example script.
Added 'Continue' menu to Navigation to continue with script.
Added run external tool by menu name to rc.
Added wait for 1st message to kkeditmsg.
Message split into smaller messages if to large (>MAX_MSG_SIZE)
Added remote controll app 'kkeditmsg' all commands now go thorugh this.
More commands added to rc.
Added activate menu by name to remote control.
Remote control is now eg: kkedit -i 1234 TELL=Nmain.cpp TELL=G5 TELL=U. activate kkedit with id=1234 switch to tab main.cpp goto line 5 and add user mark.
Can now start instance with a user defined dbus name ( for remote control, later ).
Fixed rare segfault when loading certain .cc files.
Fixed 'Toggle BM' menu text in context menu.
Fixed occasional segfault when launching external tool.
Fixed editor not coming to front when Shift-clicking docviewer documentation links.
Fixed 'Shift-Click' on links in documentation in docviewer not opening file at line number in editor.
Fixed underlines in function names creating mnemonic in menus.
Fixed underlines in bookmark creating mnemonic in menus.

0.4.1
Fixed menu icons in gtk3 mucking up the text.
Fixed not showing bookmark in gtk3 when using hotkey.
Show menu icons in gtk3 now defaults to off.

0.4.0
About window now modal.
Corrected a few menu labels.
Made session manager name box modal.
Standardized about boxes.
Tweaked some plugin makefiles.
Fixed some plugin translations not working.
Fixed plugin translation files names for gtk3 version.
Fixed some menus not being translated.
Tweaking find/replace code.
Added "Show Icons In Gtk3 Menus" to prefs.
Code clean.
Done popups.
Done menus.
Done Edit menu.
Done File menu.
Tweaked *.am files for plugs.
Fixed occasional error when loading session.